fix: point and dates z-index

--- a/src/app/components/circle/circle.module.scss
+++ b/src/app/components/circle/circle.module.scss
@@ -6,6 +6,7 @@
 
   position: relative;
   top: calc($circle-top-space - 26.5rem);
+  z-index: 1;
   margin: 0 auto;
 
   width: 53rem;
