--- a/src/app/components/point/point.module.scss
+++ b/src/app/components/point/point.module.scss
@@ -3,7 +3,7 @@
 
 .point {
   position: absolute;
-  z-index: 3;
+  z-index: 1;
 
   width: 0.5rem;
   height: 0.5rem;
